--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
       <h3>Contacts</h3>
       <p>Email: mihai.coretchi@isa.utm.md</p>
     </div>
-    
+    <div>
+        <h3>Description</h3>
+        <p>
+          My name is Coretchi Mihai. I am a student at Technical University of
+          Moldova. I am studying at the Faculty of Computers, Informatics and
+          Microelectronics. I am a third year student. I am studying the Software
+          Engineering specialization. I am a hardworking person and I am always
+          trying to improve my skills. I am a fast learner and I am always trying
+          to learn new things. I am a responsible person and I am always trying to
+          do my best in everything I do.
+        </p>
+      </div>
+      
   </body>
 </html>
