Third section Education and Links

--- a/index.html
+++ b/index.html
@@ -27,6 +27,32 @@
           do my best in everything I do.
         </p>
       </div>
-      
+      <div>
+        <h3>Education</h3>
+        <h4>Theoretical Lyceum "Ion Creanga"</h4>
+        <p>Favorite course: Physical Education</p>
+        <h4>
+          Technical University of Moldova, Faculty of Computers, Informatics and
+          Microelectronics, Software Engineering, 2021 - present
+        </h4>
+        <p>Favorite course: TMPS</p>
+      </div>
+      <div>
+        <h3>Links</h3>
+        <p>
+          <a
+            href="https://github.com/eamtcPROG/api-transport"
+            target="_blank"
+            no-referrer
+            rel
+            >React and NodeJs Project</a
+          >
+        </p>
+        <p>
+          <a href="https://github.com/eamtcPROG" target="_blank" no-referrer rel
+            >My GitHub</a
+          >
+        </p>
+      </div>
   </body>
 </html>
