--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
   <body>
     <div>
       <h1>CV</h1>
-      <h2>Coretchi Mihai</h2>
+      <div>
+        <div>
+          <h2>Coretchi Mihai</h2>
+        </div>
+        <div>
+          <img
+            src="images/avatar.webp"
+            alt="Coretchi Mihai"
+            width="200px"
+            height="200px"
+          />
+        </div>
+      </div>
     </div>
     <div>
       <h3>Contacts</h3>
@@ -27,6 +39,7 @@
         do my best in everything I do.
       </p>
     </div>
+    <br />
     <div>
       <h3>Education</h3>
       <ol>
